# stock-rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  REQUIREMENTS.md  docker-compose.yml  env.example  pyproject.toml
sample_documents/: aapl-20230930.html
scripts/: init_db.sql
src/: settings.py  urls.py  wsgi.py
src/rag_pipeline/: __init__.py  models.py  serializers.py  urls.py  views.py
src/rag_pipeline/management/commands/: ingest_documents.py  populate_embeddings.py  setup_pgvector.py
src/rag_pipeline/migrations/: 0001_initial.py  0002_chunk_embedding.py
src/rag_pipeline/services/: __init__.py  document_processor.py  embedding_service.py  llm_service.py  query_processor.py
src/rag_pipeline/utils/: __init__.py  chunking.py  html_parser.py
tests/: test_models.py  test_views.py
